# EconomicCalculator

./: .gitignore  EconomicCalculator.sln  README.md
political_economy_core/: Cargo.toml
political_economy_core/src/: Actors.rs  actor_manager.rs  actors.rs  constants.rs  data_manager.rs  demographics.rs  example_economies.md  lib.rs  market_day_flowchart.md  objects.rs  product_network.rs  runner.rs
political_economy_core/src/objects/: actor.rs  actor_message.rs  actor_objects.rs  buy_and_sell_notes  buy_and_sell_notes.md  buy_result.rs  buy_sell_and_priority_logic.md  buyer.rs  culture.rs  data_objects.rs  demographic_objects.rs  demographics.rs  desire.rs  desires.rs  environmental_objects.rs  firm.rs  firm_job.rs  ideology.rs  institution.rs  item.rs  job.rs  market.rs  master.rs  mod.rs  pop.rs  pop_breakdown_table.rs  pop_consumption_rewrite.md  pop_memory.rs  process.rs  process_node.rs  product.rs  property.rs  property_info.rs  seller.rs  skill.rs  skill_group.rs  species.rs  state.rs  technology.rs  technology_family.rs  (+3 more)
political_economy_core/src/objects/actor_objects/: actor.rs  actor_message.rs  buy_and_sell_notes.md  buy_and_sell_state_diagrams_Outdated.md  buy_sell_and_priority_logic.md  desire.rs  firm.rs  goods_and_time_trading.md  institution.rs  job.rs  pop.rs  pop_consumption_rewrite.md  property.rs  (+3 more)
political_economy_core/tests/: data_manager_tests.rs  desire_tests.rs  pop_breakdown_table_tests.rs  pop_tests.rs  process_tests.rs  product_tests.rs  property_info_tests.rs  property_tests.rs  tiered_value_tests.rs  want_info_tests.rs  want_tests.rs
(+1511 files in other folders)
