[package]
name = "political_economy_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
itertools = "0.10.5"
crossbeam = "0.8.2"
crossbeam-utils = "0.8.14"
async-broadcast = "0.5.0"